[package]
name = "remove_empty_query_params"
version = "0.1.1"
edition = "2021"
description = "tower middleware to remove empty query parameters"
readme = "README.md"
authors = ["Mingtao Yang <mt@empty.fun>"]
license = "MIT"
repository = "https://github.com/mingtaoy/remove_empty_query_params"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1.2.0"
http = "0.2"
percent-encoding = "2.3.0"
tower = "0.4"
